[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Grotto.tscn" type="PackedScene" id=2]
[ext_resource path="res://Super Grotto Escape Files/Environment/Layers/back.png" type="Texture" id=3]
[ext_resource path="res://Super Grotto Escape Files/Environment/Layers/far.png" type="Texture" id=4]
[ext_resource path="res://scenes/FaseUm.gd" type="Script" id=5]
[ext_resource path="res://scenes/Dino.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/DinoShot.tscn" type="PackedScene" id=7]
[ext_resource path="res://audios/SuperGrottoEscape.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Bat.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/AreaMorte.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/vida.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/municao.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Boss_Gosma.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/CheckPoint.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/area_morte.tscn" type="PackedScene" id=21]
[ext_resource path="res://audios/musicaboss.wav" type="AudioStream" id=22]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=23]

[sub_resource type="CapsuleShape2D" id=13]
radius = 21.0
height = 46.0

[node name="FaseUm" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_mirroring = Vector2( 670, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2.24167, 2.24167 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 750, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 2.25833, 2.25833 )
texture = ExtResource( 4 )
centered = false

[node name="Inimigos" type="Node2D" parent="."]

[node name="Dino" parent="Inimigos" instance=ExtResource( 6 )]
position = Vector2( 235, 384 )

[node name="Dino2" parent="Inimigos" instance=ExtResource( 6 )]
position = Vector2( 305, 384 )

[node name="Dino3" parent="Inimigos" instance=ExtResource( 6 )]
position = Vector2( 469, 368 )

[node name="Dino4" parent="Inimigos" instance=ExtResource( 6 )]
position = Vector2( 1122, 352 )

[node name="Dino5" parent="Inimigos" instance=ExtResource( 6 )]
position = Vector2( 1960, 369 )

[node name="DinoShot" parent="Inimigos" instance=ExtResource( 7 )]
position = Vector2( 748, 384 )

[node name="Bat" parent="Inimigos" instance=ExtResource( 9 )]
position = Vector2( 1318, -2 )

[node name="Bat2" parent="Inimigos" instance=ExtResource( 9 )]
position = Vector2( 1533, 42 )

[node name="Bat4" parent="Inimigos" instance=ExtResource( 9 )]
position = Vector2( 1779, 36 )

[node name="Bat3" parent="Inimigos" instance=ExtResource( 9 )]
position = Vector2( 2071, 72 )

[node name="Grotto" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 381 )

[node name="Consumiveis" type="Node2D" parent="."]

[node name="vida" parent="Consumiveis" instance=ExtResource( 11 )]
position = Vector2( 52, 426 )

[node name="vida2" parent="Consumiveis" instance=ExtResource( 11 )]
position = Vector2( 829, 391 )

[node name="municao" parent="Consumiveis" instance=ExtResource( 12 )]
position = Vector2( 855, 390 )

[node name="municao2" parent="Consumiveis" instance=ExtResource( 12 )]
position = Vector2( 1295, 313 )

[node name="municao3" parent="Consumiveis" instance=ExtResource( 12 )]
position = Vector2( 1894, 342 )

[node name="municao5" parent="Consumiveis" instance=ExtResource( 12 )]
position = Vector2( 2347, 274 )

[node name="municao4" parent="Consumiveis" instance=ExtResource( 12 )]
position = Vector2( 1581, 268 )

[node name="Areas" type="Node2D" parent="."]

[node name="Area2D" parent="Areas" instance=ExtResource( 21 )]
position = Vector2( 198, 513 )

[node name="AreaMorte" parent="Areas" instance=ExtResource( 10 )]
position = Vector2( 1523, 537 )

[node name="Boss_Caveira" parent="." instance=ExtResource( 15 )]
position = Vector2( 2820, 366 )

[node name="Areas_boss" type="Node2D" parent="."]
modulate = Color( 0.937255, 0.027451, 0.027451, 1 )

[node name="Area2D" type="Area2D" parent="Areas_boss"]
position = Vector2( 2470, 305 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas_boss/Area2D"]
shape = SubResource( 13 )

[node name="CheckPoint" parent="." instance=ExtResource( 20 )]
position = Vector2( 1061, 334 )

[node name="AudioBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )

[node name="boss_death" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="hud" parent="." instance=ExtResource( 23 )]
margin_left = 15.0
margin_top = 76.0
margin_right = 148.0
margin_bottom = 146.0

[node name="municaoCima" type="Position2D" parent="."]
position = Vector2( 2473, 330 )

[node name="municaoBaixo" type="Position2D" parent="."]
position = Vector2( 2635, 381 )

[node name="recargaMunicao" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Areas_boss/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="boss_death" to="." method="_on_boss_death_timeout"]
[connection signal="timeout" from="recargaMunicao" to="." method="recarga_municao_timeout"]
